<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:layout_height="80dp">


    <TextView
        android:id="@+id/currency_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/item_padding_size"
        android:text="@string/item_first_line"
        android:textColor="@color/teal_200" />

    <TextView
        android:id="@+id/rate_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/item_padding_size"
        android:text="@string/item_second_line"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/date_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/item_padding_size"
        android:text="@string/item_third_line"
        android:textColor="@color/black" />
</LinearLayout>